--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -13,7 +12,7 @@
       font-family: 'Helvetica', sans-serif;
     }
     header {
-      background-image: url('https://via.placeholder.com/800x450?text=Capa+Principal');
+      background-image: url('https://via.placeholder.com/800x450?text=Parceria+Inimagin%C3%A1vel');
       background-size: cover;
       background-position: center;
       padding: 60px 20px;
@@ -83,6 +82,11 @@
       padding: 2px 4px;
       border-radius: 2px;
     }
+    .episode-title {
+      padding: 10px;
+      font-size: 14px;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -98,20 +102,34 @@
     <h2>Melhores episódios</h2>
     <div class="grid">
       <div class="episode">
-        <img src="https://via.placeholder.com/300x170?text=Episódio+1" alt="Episódio 1">
+        <img src="https://via.placeholder.com/300x170?text=Epis%C3%B3dio+1" alt="Episódio 1">
         <div class="hd-tag">HD</div>
+        <div class="episode-title">Episódio 1</div>
       </div>
       <div class="episode">
-        <img src="https://via.placeholder.com/300x170?text=Episódio+2" alt="Episódio 2">
+        <img src="https://via.placeholder.com/300x170?text=Epis%C3%B3dio+2" alt="Episódio 2">
         <div class="hd-tag">HD</div>
+        <div class="episode-title">Episódio 2</div>
       </div>
       <div class="episode">
-        <img src="https://via.placeholder.com/300x170?text=Episódio+3" alt="Episódio 3">
+        <img src="https://via.placeholder.com/300x170?text=Epis%C3%B3dio+3" alt="Episódio 3">
         <div class="hd-tag">HD</div>
+        <div class="episode-title">Episódio 3</div>
       </div>
       <div class="episode">
-        <img src="https://via.placeholder.com/300x170?text=Episódio+4" alt="Episódio 4">
+        <img src="https://via.placeholder.com/300x170?text=Epis%C3%B3dio+4" alt="Episódio 4">
         <div class="hd-tag">HD</div>
+        <div class="episode-title">Episódio 4</div>
+      </div>
+      <div class="episode">
+        <img src="https://via.placeholder.com/300x170?text=Parceria+Inimagin%C3%A1vel" alt="Parceria Inimaginável">
+        <div class="hd-tag">HD</div>
+        <div class="episode-title">Parceria inimaginável</div>
+      </div>
+      <div class="episode">
+        <img src="https://via.placeholder.com/300x170?text=A+melhor+risada" alt="A melhor risada">
+        <div class="hd-tag">HD</div>
+        <div class="episode-title">A melhor risada</div>
       </div>
     </div>
   </section>
